tdf#139529 Fix incomplete DisplayName property for table styles

Commit 4dc823990ab217cb9d07a0555d3015d43380fdf5 ("tdf#107852
Support DisplayName property for table styles") only handled
the getPropertyValue method, which isn't enough to make it
work with introspection, as used from Basic or the new dev
docking panel.

Change-Id: Ia4d90ab6030585dc469c0b274bef4b988ce647c1